[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/butter.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.cs" type="Script" id=2]
[ext_resource path="res://assets/sounds/jump_1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/jump_3.mp3" type="AudioStream" id=4]
[ext_resource path="res://scripts/player_sounds.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/slide_1.mp3" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 2.5 )

[node name="Player" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.25 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="dash_timer" type="Timer" parent="."]
pause_mode = 1
one_shot = true

[node name="PlayerSounds" type="Node" parent="."]
script = ExtResource( 5 )

[node name="jump_1" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 3 )
pitch_scale = 0.85

[node name="jump_2" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 4 )
pitch_scale = 0.85

[node name="sliding" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 6 )

[connection signal="Jumped" from="." to="PlayerSounds" method="_on_Player_Jumped"]
[connection signal="Moved" from="." to="PlayerSounds" method="_on_Player_Moved"]
